kaba/lexer/.antlr/KabaParser.java
// Generated from z:/Kaba/kaba/lexer/Kaba.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class KabaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BOK=1, TORBASI=2, BOKU=3, KAT=4, SÖK=5, ÇAK=6, YAR=7, AYNI=8, TERSI=9, 
		KOYMUŞ=10, KOYMAMIŞ=11, VE=12, YA=13, SIKTIYSE=14, SIKMEDIYSE=15, SIKERKEN=16, 
		SALLAYARAK=17, ÇÖK=18, TÜKÜR=19, DENESENE=20, SIÇARSA=21, REZALET=22, 
		PATLAT=23, SOK=24, ŞÖYLE=25, BÖYLE=26, HADI=27, SIKTIR=28, DEMIŞ=29, DEMEMIŞ=30, 
		VIRGUL=31, AMK=32, AMQ=33, AQ=34, AMIK=35, AMINAKOYUM=36, DÜZ=37, SULU=38, 
		NET=39, SAÇMA=40, SIKER=41, SIKMEZ=42, STRING_BLOCK=43, SUFFIX=44, ID=45, 
		WS=46, UNRECOGNIZED=47;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_terminator = 2, RULE_declarationStmt = 3, 
		RULE_assignmentStmt = 4, RULE_expressionStmt = 5, RULE_ifStmt = 6, RULE_whileStmt = 7, 
		RULE_forStmt = 8, RULE_tryCatchStmt = 9, RULE_throwStmt = 10, RULE_block = 11, 
		RULE_functionDef = 12, RULE_blockWithReturn = 13, RULE_returnStmt = 14, 
		RULE_classDef = 15, RULE_classMember = 16, RULE_paramList = 17, RULE_param = 18, 
		RULE_expression = 19, RULE_expr_or = 20, RULE_expr_and = 21, RULE_expr_cmp = 22, 
		RULE_expr_add = 23, RULE_expr_mul = 24, RULE_expr_unary = 25, RULE_atom = 26, 
		RULE_expressionList = 27, RULE_functionCall = 28, RULE_variableRef = 29, 
		RULE_booleanLiteral = 30, RULE_typeSpec = 31, RULE_arrayRef = 32, RULE_className = 33, 
		RULE_functionName = 34, RULE_variableName = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "terminator", "declarationStmt", "assignmentStmt", 
			"expressionStmt", "ifStmt", "whileStmt", "forStmt", "tryCatchStmt", "throwStmt", 
			"block", "functionDef", "blockWithReturn", "returnStmt", "classDef", 
			"classMember", "paramList", "param", "expression", "expr_or", "expr_and", 
			"expr_cmp", "expr_add", "expr_mul", "expr_unary", "atom", "expressionList", 
			"functionCall", "variableRef", "booleanLiteral", "typeSpec", "arrayRef", 
			"className", "functionName", "variableName"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'Bok'", "'Torbas\\u0131'", "'boku'", "'kat'", "'s\\u00F6k'", "'\\u00E7ak'", 
			"'yar'", "'ayn\\u0131'", "'tersi'", "'koymu\\u015F'", "'koymam\\u0131\\u015F'", 
			"'ve'", "'ya'", "'siktiyse'", "'sikmediyse'", "'sikerken'", "'sallayarak'", 
			"'\\u00E7\\u00F6k'", "'t\\u00FCk\\u00FCr'", "'denesene'", "'s\\u0131\\u00E7arsa'", 
			"'rezalet'", "'patlat'", "'sok'", "'\\u015F\\u00F6yle'", "'b\\u00F6yle'", 
			"'hadi'", "'siktir'", "'demi\\u015F'", "'dememi\\u015F'", "'virg\\u00FCl'", 
			"'amk'", "'amq'", "'aq'", "'am\\u0131k'", "'am\\u0131nakoyum'", "'D\\u00FCz'", 
			"'Sulu'", "'Net'", "'Sa\\u00E7ma'", "'Siker'", "'Sikmez'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BOK", "TORBASI", "BOKU", "KAT", "S\u0001K", "\u0000AK", "YAR", 
			"AYNI", "TERSI", "KOYMU\u0005", "KOYMAMI\u0007", "VE", "YA", "SIKTIYSE", 
			"SIKMEDIYSE", "SIKERKEN", "SALLAYARAK", "\u0000\u0001K", "T\u0001K\u0003R", 
			"DENESENE", "SI\u0002ARSA", "REZALET", "PATLAT", "SOK", "\u0000\u0001YLE", 
			"B\u0001YLE", "HADI", "SIKTIR", "DEMI\u0004", "DEMEMI\u0006", "VIRGUL", 
			"AMK", "AMQ", "AQ", "AMIK", "AMINAKOYUM", "D\u0001Z", "SULU", "NET", 
			"SA\u0002MA", "SIKER", "SIKMEZ", "STRING_BLOCK", "SUFFIX", "ID", "WS", 
			"UNRECOGNIZED"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Kaba.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KabaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(KabaParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<FunctionDefContext> functionDef() {
			return getRuleContexts(FunctionDefContext.class);
		}
		public FunctionDefContext functionDef(int i) {
			return getRuleContext(FunctionDefContext.class,i);
		}
		public List<ClassDefContext> classDef() {
			return getRuleContexts(ClassDefContext.class);
		}
		public ClassDefContext classDef(int i) {
			return getRuleContext(ClassDefContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 52639153782784L) != 0)) {
				{
				setState(75);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(72);
					statement();
					}
					break;
				case 2:
					{
					setState(73);
					functionDef();
					}
					break;
				case 3:
					{
					setState(74);
					classDef();
					}
					break;
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public DeclarationStmtContext declarationStmt() {
			return getRuleContext(DeclarationStmtContext.class,0);
		}
		public TerminatorContext terminator() {
			return getRuleContext(TerminatorContext.class,0);
		}
		public AssignmentStmtContext assignmentStmt() {
			return getRuleContext(AssignmentStmtContext.class,0);
		}
		public ExpressionStmtContext expressionStmt() {
			return getRuleContext(ExpressionStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public WhileStmtContext whileStmt() {
			return getRuleContext(WhileStmtContext.class,0);
		}
		public ForStmtContext forStmt() {
			return getRuleContext(ForStmtContext.class,0);
		}
		public TryCatchStmtContext tryCatchStmt() {
			return getRuleContext(TryCatchStmtContext.class,0);
		}
		public ThrowStmtContext throwStmt() {
			return getRuleContext(ThrowStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(98);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				declarationStmt();
				setState(83);
				terminator();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				assignmentStmt();
				setState(86);
				terminator();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				expressionStmt();
				setState(89);
				terminator();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(91);
				ifStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(92);
				whileStmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(93);
				forStmt();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(94);
				tryCatchStmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(95);
				throwStmt();
				setState(96);
				terminator();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TerminatorContext extends ParserRuleContext {
		public TerminalNode AMK() { return getToken(KabaParser.AMK, 0); }
		public TerminalNode AMQ() { return getToken(KabaParser.AMQ, 0); }
		public TerminalNode AQ() { return getToken(KabaParser.AQ, 0); }
		public TerminalNode AMIK() { return getToken(KabaParser.AMIK, 0); }
		public TerminalNode AMINAKOYUM() { return getToken(KabaParser.AMINAKOYUM, 0); }
		public TerminatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminator; }
	}

	public final TerminatorContext terminator() throws RecognitionException {
		TerminatorContext _localctx = new TerminatorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_terminator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 133143986176L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationStmtContext extends ParserRuleContext {
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public TerminalNode BOK() { return getToken(KabaParser.BOK, 0); }
		public TerminalNode SUFFIX() { return getToken(KabaParser.SUFFIX, 0); }
		public VariableNameContext variableName() {
			return getRuleContext(VariableNameContext.class,0);
		}
		public TerminalNode ÇÖK() { return getToken(KabaParser.ÇÖK, 0); }
		public TerminalNode TORBASI() { return getToken(KabaParser.TORBASI, 0); }
		public DeclarationStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationStmt; }
	}

	public final DeclarationStmtContext declarationStmt() throws RecognitionException {
		DeclarationStmtContext _localctx = new DeclarationStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declarationStmt);
		try {
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				typeSpec();
				setState(103);
				match(BOK);
				setState(104);
				match(SUFFIX);
				setState(105);
				variableName();
				setState(106);
				match(ÇÖK);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				typeSpec();
				setState(109);
				match(BOK);
				setState(110);
				match(TORBASI);
				setState(111);
				match(SUFFIX);
				setState(112);
				variableName();
				setState(113);
				match(ÇÖK);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentStmtContext extends ParserRuleContext {
		public VariableRefContext variableRef() {
			return getRuleContext(VariableRefContext.class,0);
		}
		public List<TerminalNode> SUFFIX() { return getTokens(KabaParser.SUFFIX); }
		public TerminalNode SUFFIX(int i) {
			return getToken(KabaParser.SUFFIX, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SOK() { return getToken(KabaParser.SOK, 0); }
		public AssignmentStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignmentStmt; }
	}

	public final AssignmentStmtContext assignmentStmt() throws RecognitionException {
		AssignmentStmtContext _localctx = new AssignmentStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignmentStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			variableRef();
			setState(118);
			match(SUFFIX);
			setState(119);
			expression();
			setState(120);
			match(SUFFIX);
			setState(121);
			match(SOK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionStmtContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpressionStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionStmt; }
	}

	public final ExpressionStmtContext expressionStmt() throws RecognitionException {
		ExpressionStmtContext _localctx = new ExpressionStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expressionStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStmtContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SIKTIYSE() { return getToken(KabaParser.SIKTIYSE, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode SIKMEDIYSE() { return getToken(KabaParser.SIKMEDIYSE, 0); }
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ifStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			expression();
			setState(126);
			match(SIKTIYSE);
			setState(127);
			block();
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SIKMEDIYSE) {
				{
				setState(128);
				match(SIKMEDIYSE);
				setState(129);
				block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileStmtContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SIKERKEN() { return getToken(KabaParser.SIKERKEN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStmt; }
	}

	public final WhileStmtContext whileStmt() throws RecognitionException {
		WhileStmtContext _localctx = new WhileStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_whileStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			expression();
			setState(133);
			match(SIKERKEN);
			setState(134);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForStmtContext extends ParserRuleContext {
		public VariableNameContext variableName() {
			return getRuleContext(VariableNameContext.class,0);
		}
		public List<TerminalNode> SUFFIX() { return getTokens(KabaParser.SUFFIX); }
		public TerminalNode SUFFIX(int i) {
			return getToken(KabaParser.SUFFIX, i);
		}
		public ArrayRefContext arrayRef() {
			return getRuleContext(ArrayRefContext.class,0);
		}
		public TerminalNode SALLAYARAK() { return getToken(KabaParser.SALLAYARAK, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forStmt; }
	}

	public final ForStmtContext forStmt() throws RecognitionException {
		ForStmtContext _localctx = new ForStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_forStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			variableName();
			setState(137);
			match(SUFFIX);
			setState(138);
			arrayRef();
			setState(139);
			match(SUFFIX);
			setState(140);
			match(SALLAYARAK);
			setState(141);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TryCatchStmtContext extends ParserRuleContext {
		public TerminalNode DENESENE() { return getToken(KabaParser.DENESENE, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode SIÇARSA() { return getToken(KabaParser.SIÇARSA, 0); }
		public TryCatchStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tryCatchStmt; }
	}

	public final TryCatchStmtContext tryCatchStmt() throws RecognitionException {
		TryCatchStmtContext _localctx = new TryCatchStmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_tryCatchStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(DENESENE);
			setState(144);
			block();
			setState(145);
			match(SIÇARSA);
			setState(146);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ThrowStmtContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SUFFIX() { return getToken(KabaParser.SUFFIX, 0); }
		public TerminalNode PATLAT() { return getToken(KabaParser.PATLAT, 0); }
		public ThrowStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_throwStmt; }
	}

	public final ThrowStmtContext throwStmt() throws RecognitionException {
		ThrowStmtContext _localctx = new ThrowStmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_throwStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			expression();
			setState(149);
			match(SUFFIX);
			setState(150);
			match(PATLAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode HADI() { return getToken(KabaParser.HADI, 0); }
		public TerminalNode SIKTIR() { return getToken(KabaParser.SIKTIR, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(HADI);
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 52639153782784L) != 0)) {
				{
				{
				setState(153);
				statement();
				}
				}
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			match(SIKTIR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefContext extends ParserRuleContext {
		public TypeSpecContext typeSpec() {
			return getRuleContext(TypeSpecContext.class,0);
		}
		public TerminalNode BOK() { return getToken(KabaParser.BOK, 0); }
		public TerminalNode SUFFIX() { return getToken(KabaParser.SUFFIX, 0); }
		public FunctionNameContext functionName() {
			return getRuleContext(FunctionNameContext.class,0);
		}
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public BlockWithReturnContext blockWithReturn() {
			return getRuleContext(BlockWithReturnContext.class,0);
		}
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_functionDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			typeSpec();
			setState(162);
			match(BOK);
			setState(163);
			match(SUFFIX);
			setState(164);
			functionName();
			setState(165);
			paramList();
			setState(166);
			blockWithReturn();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
